# wagner

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  DESIGN.md  Makefile  PRODUCT.md  README.md  VISION.md  build-context.md  docker-compose.yml  handoff.md  package-lock.json  package.json  prd.md  rust-toolchain.toml  tsconfig.base.json
docs/: architecture.md  development.md  runtime-architecture.md  ui-redesign-findings.md  wagner-vision-and-architecture.md
docs/adr/: 0001-wedge-hub-surrealdb-deno.md  0002-operator-identity-via-sso-oidc.md  0003-remote-transport-iroh-org-relay.md  0004-deployment-topology-sovereign-engine-attach-clients.md
docs/spec/: constitution.md  defaults.md
edge/host/: Cargo.toml
edge/host/resources/: gate-server.mjs
edge/host/schemas/: oracle-plan.schema.json  run-state.schema.json  transmission.schema.json  wagner-event.schema.json  workflow-step-event.schema.json
edge/host/schemas/bus/: command.json  envelope.json  event.json  plugin_manifest.json
edge/host/schemas/bus/ext/: ext-slack-message.schema.json
edge/host/src/: lib.rs  memory.rs  permission_server.rs  schema.rs  transmissions.rs
edge/host/src/bus/: command.rs  dispatch.rs  envelope.rs  event.rs  manifest.rs  mod.rs  participant.rs  registry.rs  runtime.rs
edge/host/src/cli/: driver.rs  endpoint.rs  mod.rs  preflight.rs  runner.rs
edge/host/src/events/: map_claude.rs  map_codex.rs  mod.rs  model.rs  project.rs
edge/host/src/orchestrator/: engine.rs  goal_loop_agent.rs  guardrails.rs  identity.rs  json_scan.rs  judge.rs  mod.rs  oracle.rs  panel.rs  roster.rs  run_loop.rs  run_router.rs  scheduler.rs  workflow.rs  workflow_exec.rs
edge/host/src/participants/: mod.rs  scheduler.rs  slack.rs  voice_intake.rs  voice_projection.rs
edge/host/src/remote/: arm.rs  control.rs  devcontext.rs  endpoint.rs  mod.rs  observability.rs  session.rs
edge/host/src/state/: mod.rs  run.rs  store.rs
edge/host/src/tray/: mod.rs  shell_binding.md
edge/host/src/vault/: crdt.rs  linker.rs  mod.rs  projector.rs  snapshot_store.rs  sync_adapter.rs
edge/host/src/voice/: aec.rs  cancel.rs  capture.rs  http_stt.rs  http_tts.rs  manager.rs  mod.rs  models.rs  pipeline.rs  router.rs  stt.rs  tts.rs  types.rs
edge/host/tests/: driver_pipe.rs  eval.rs  gate_e2e.rs  goal_loop.rs  goal_loop_agent.rs  http_voice_engines.rs  permission_server.rs  vault_sync_n0_e2e.rs  voice_models.rs  voice_pipeline.rs
edge/host/tests/fixtures/: can_use_tool.json  claude-sample.jsonl  codex-sample.jsonl
edge/host/tests/fixtures/eval/: sample-goal.md
edge/host/tests/integration/: arming.rs  attach.rs  attach_perf.rs  attach_refused.rs  concurrent_control.rs  devctx_command.rs  devctx_privacy.rs  edge_autonomy_offline.rs  ephemeral_session.rs  no_hub_readable_runstate.rs  no_pty.rs  remote_control.rs  reopen_fidelity.rs  run_survives_close.rs  tray_lifecycle.rs  tray_status.rs  vault_sync_live.rs
edge/host/tests/unit/: bus_additive_version.rs  bus_dispatch.rs  bus_no_handle_guard.rs  bus_registry.rs  bus_runtime.rs  bus_schema_validate.rs  bus_serde_roundtrip.rs  devctx_filescope.rs  gate_seam.rs  projector_crdt_to_file.rs  projector_file_to_crdt.rs  run_cancel.rs  schema_roundtrip.rs  snapshot_store_inmemory.rs  sync_adapter_inmemory.rs  vault_crdt_init.rs  wikilink_rename.rs
edge/shell/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
edge/shell/capabilities/: voice-sidecars.json
edge/shell/src/: bus_gateway.rs  commands.rs  gate.rs  lib.rs  main.rs  pool.rs  suite.rs  voice_lifecycle.rs
edge/tts-sidecar/: .gitignore  Cargo.toml  README.md
edge/tts-sidecar/src/: kokoro.rs  main.rs  server.rs  vocab.rs  voices.rs  wav.rs
edge/tts-sidecar/tests/: integration.rs
edge/ui/: PRODUCT.md  index.html  package.json  tsconfig.json  vite.config.ts
edge/ui/app/: App.tsx  (+4 more)
hub/: .dockerignore  Dockerfile  deno.json
hub/src/: app.ts  main.ts
memory/: 000-index.md  001-autonomous-build-mandate.md  002-run-is-session.md  003-acceptance-harness-strategy.md  004-roadmap-and-parallelization.md  005-repo-commit-hooks.md  006-resume-defaults.md  007-worktree-lane-integration.md  008-n0-relays.md
mocks/: _app.css  _shared.css  agents.html  coding.html  dashboard.html  graph.js  index.html  knowledge.html  orb.js  readme.md  settings.html  workflows.html
scripts/: dev-app.sh  stage-voice-binaries.sh  voice-sidecars.sh
shared/: package.json  tsconfig.json  vitest.config.ts
shared/contracts/: command.d.ts  contracts.test.ts  envelope.d.ts  event.d.ts  index.ts  plugin_manifest.d.ts
shared/reducer/: remote-events.test.ts  remote-events.ts  remote-reducer.ts  run-events.ts  run-reducer.test.ts  run-reducer.ts
shared/schemas/: dev-context-cmd.schema.json  dev-context-file.schema.json  learning.schema.json  remote-arm.schema.json  remote-attach.schema.json  remote-control.schema.json  remote-event.schema.json  remote.test.ts  run.schema.json
shared/scripts/: contracts-barrel.mjs
shared/transport/: index.ts  resync.test.ts  resync.ts
specs/001-shared-runs-and-learnings/: challenges.md  change-set.md  plan.md  spec.md  tasks.md  validation-report.md
specs/002-edge-surface-and-remote-sessions/: challenges.md  design.md  plan.md  quickstart.md  spec.md  tasks.md  validation-report.md
specs/003-durable-concurrent-sessions/: acceptance.md  plan.md
specs/004-vault-v1/: plan.md
specs/006-sync/: plan.md
specs/007-voice/: plan.md
specs/008-hub-vault/: plan.md
specs/009-voice-http-engines/: plan.md  quickstart.md  research.md  session-turnover.md  spec.md  tasks.md
specs/010-voice-native-bundle/: plan.md
specs/011-runtime-foundation/: plan.md
specs/012-platform-foundation/: design.md
specs/013-event-bus-contracts/: challenges.md  plan.md  spec.md  tasks.md  validation-report.md
specs/014-registry-run-supervision/: challenges.md  plan.md  session-turnover.md  spec.md  tasks.md  validation-report.md
specs/015-voice-participants/: challenges.md  design.md  plan.md  research.md  spec.md  tasks.md  validation-report.md
tests/architecture/: dependency-direction.test.ts  package.json
(+64 files in other folders)
