[package]
name = "wagner-edge-host"
edition.workspace = true
version.workspace = true
publish.workspace = true
description = "Wagner edge host — ported incrementally from apps/wagner/src-tauri (orchestrator, event-sourced run-state, durable sync queue, project_key derivation)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
