[package]
name = "wagner-edge-host"
edition.workspace = true
version.workspace = true
publish.workspace = true
description = "Wagner edge host — ported incrementally from apps/wagner/src-tauri (orchestrator, event-sourced run-state, durable sync queue, project_key derivation)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
jsonschema = { workspace = true }
schemars = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
portable-pty = { workspace = true }
surrealdb = { workspace = true }
# Remote transport (ADR-0003); wired at US2 T027. Declared at Setup (T001) to
# verify it resolves + builds on the carried 1.90 toolchain.
iroh = { workspace = true }
iroh-gossip = "0.101.0"
iroh-docs = "0.101.0"
bytes = { workspace = true }
loro = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
similar = { workspace = true }

# Voice native audio I/O (spec 015 Phase 2) — optional, behind the `voice-io`
# feature so the default build + pure-logic CI lanes stay light. AEC3 via the
# WebRTC APM (bundled/static, BSD-3-Clause; research R5). cpal/wake/VAD added as
# their modules land.
webrtc-audio-processing = { version = "2", features = ["bundled"], optional = true }
# Microphone/speaker device I/O (T006/T008). Default host (CoreAudio on macOS); the
# `cpal::Stream` open is the only device-gated part of capture.rs — the framing,
# resample, and WAV encode are pure and tested headless.
cpal = { version = "0.15", optional = true }
# NOTE: VAD = `earshot` (pure-Rust embedded NN, no `ort`/ONNX) — resolves the former
# `ort` rc.10↔rc.12 clash with wagner-tts-sidecar (Kokoro) by avoiding `ort` entirely.
# Every Silero crate pins `ort =2.0.0-rc.10`, so Silero is out unless vendored via
# tract by hand (R2 fallback). earshot accuracy is unbenchmarked → validate on-device.
# Add `earshot` to voice-io when vad.rs (T028) lands.

[features]
# Compiles the native-audio path (cpal capture/playback, AEC). VAD pending (see above).
voice-io = ["dep:webrtc-audio-processing", "dep:cpal"]

[dev-dependencies]
tempfile = { workspace = true }

# wedge-002 integration/unit tests live under tests/{integration,unit}/ (the
# spec's paths). Cargo does not auto-discover test subdirectories, so each is
# declared explicitly as its own test target.
[[test]]
name = "edge_autonomy_offline"
path = "tests/integration/edge_autonomy_offline.rs"

[[test]]
name = "gate_seam"
path = "tests/unit/gate_seam.rs"

[[test]]
name = "tray_status"
path = "tests/integration/tray_status.rs"

[[test]]
name = "tray_lifecycle"
path = "tests/integration/tray_lifecycle.rs"

[[test]]
name = "run_survives_close"
path = "tests/integration/run_survives_close.rs"

[[test]]
name = "reopen_fidelity"
path = "tests/integration/reopen_fidelity.rs"

[[test]]
name = "arming"
path = "tests/integration/arming.rs"

[[test]]
name = "attach_refused"
path = "tests/integration/attach_refused.rs"

[[test]]
name = "ephemeral_session"
path = "tests/integration/ephemeral_session.rs"

[[test]]
name = "attach"
path = "tests/integration/attach.rs"

[[test]]
name = "no_hub_readable_runstate"
path = "tests/integration/no_hub_readable_runstate.rs"

[[test]]
name = "devctx_filescope"
path = "tests/unit/devctx_filescope.rs"

[[test]]
name = "devctx_command"
path = "tests/integration/devctx_command.rs"

[[test]]
name = "no_pty"
path = "tests/integration/no_pty.rs"

[[test]]
name = "remote_control"
path = "tests/integration/remote_control.rs"

[[test]]
name = "concurrent_control"
path = "tests/integration/concurrent_control.rs"

[[test]]
name = "devctx_privacy"
path = "tests/integration/devctx_privacy.rs"

[[test]]
name = "attach_perf"
path = "tests/integration/attach_perf.rs"

# Voice pillar (spec 007) — STT/TTS pipeline integration tests.
[[test]]
name = "voice_pipeline"
path = "tests/voice_pipeline.rs"

# Voice pillar (spec 009) — HttpStt/HttpTts hermetic HTTP adapter tests.
[[test]]
name = "http_voice_engines"
path = "tests/http_voice_engines.rs"

# Voice pillar (step 7) — model download manager unit tests.
[[test]]
name = "voice_models"
path = "tests/voice_models.rs"

# 006 — vault sync unit tests
[[test]]
name = "vault_crdt_init"
path = "tests/unit/vault_crdt_init.rs"

[[test]]
name = "projector_file_to_crdt"
path = "tests/unit/projector_file_to_crdt.rs"

[[test]]
name = "projector_crdt_to_file"
path = "tests/unit/projector_crdt_to_file.rs"

[[test]]
name = "sync_adapter_inmemory"
path = "tests/unit/sync_adapter_inmemory.rs"

[[test]]
name = "snapshot_store_inmemory"
path = "tests/unit/snapshot_store_inmemory.rs"

[[test]]
name = "wikilink_rename"
path = "tests/unit/wikilink_rename.rs"

# 008 — live iroh-gossip integration test (requires loopback; ignored by default)
[[test]]
name = "vault_sync_live"
path = "tests/integration/vault_sync_live.rs"

# n0 relay E2E — two real iroh Endpoints over n0 public relays; ignored by default
[[test]]
name = "vault_sync_n0_e2e"
path = "tests/vault_sync_n0_e2e.rs"

# 013 — event-bus contract tests (types-only; serde round-trip, schema
# accept/reject, no-handle seam guard, additive-versioning regression).
[[test]]
name = "bus_serde_roundtrip"
path = "tests/unit/bus_serde_roundtrip.rs"

[[test]]
name = "bus_schema_validate"
path = "tests/unit/bus_schema_validate.rs"

[[test]]
name = "bus_no_handle_guard"
path = "tests/unit/bus_no_handle_guard.rs"

[[test]]
name = "bus_additive_version"
path = "tests/unit/bus_additive_version.rs"

# 014 US2 — typed schema round-trip (Run / WagnerEvent / ModelProgress each
# validate against their derived JSON Schema + serde round-trip, D-TEST-3).
[[test]]
name = "schema_roundtrip"
path = "tests/unit/schema_roundtrip.rs"

# 011 P1 — in-process bus runtime (publish/subscribe, per-stream seq, Lagged).
[[test]]
name = "bus_runtime"
path = "tests/unit/bus_runtime.rs"

# 011 P3 — command intake (dispatch: validate → authorize → stamp → enqueue).
[[test]]
name = "bus_dispatch"
path = "tests/unit/bus_dispatch.rs"

# 011 P4 — agent registry (spawn/supervise/stop, subscription routing, context).
[[test]]
name = "bus_registry"
path = "tests/unit/bus_registry.rs"

# 014 US1 — run cancel, backpressure-abort, blocked-timeout halt (T005/T006/T010/T033).
[[test]]
name = "run_cancel"
path = "tests/unit/run_cancel.rs"
