# Wagner edge desktop shell (T019) — the Tauri app that assembles the headless
# `wagner-edge-host` engine, the permission gate, the tray lifecycle, and (US2)
# the iroh remote endpoint into a launchable desktop binary. The engine itself
# stays Tauri-free (Article VI); all Tauri glue lives here.
[package]
name = "wagner-edge-shell"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "wagner_edge_shell"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Serve the embedded `frontendDist` via the `tauri://` asset protocol instead of
# the `devUrl` dev server. Tauri's `is_dev()` is `!cfg!(feature = "custom-protocol")`,
# so a bare `cargo run` without this feature loads `localhost:1420` (the vite dev
# server) — blank unless `tauri dev` is serving it. `make platform-edge` enables
# this to launch against the built bundle with no dev server / tauri-cli needed.
# `cargo tauri dev` (hot-reload) intentionally omits it and uses `devUrl`.
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# voice-io enables the native-audio path (cpal mic capture for PTT, AEC).
wagner-edge-host = { path = "../host", features = ["voice-io"] }
async-trait = "0.1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
shell-words = "1"

# F38: force the main window's NSWindow collection behavior to FullScreenPrimary
# so the green title-bar button enters a true macOS fullscreen Space (an
# accessory/tray-only app doesn't get this by default). Already a transitive dep
# of tao with the `NSWindow` feature, so this pulls in nothing new.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSWindow"] }
# Request microphone access via AVFoundation at startup — cpal's CoreAudio input
# does NOT trigger the macOS TCC prompt on its own, so without this the mic is
# silently denied (all-zero samples). Already in the tree via objc2-app-kit.
objc2 = "0.6"
objc2-foundation = "0.3"
block2 = "0.6"
